@@ -2,9 +2,9 @@
 #'
 #' These functions allow convenient access to \code{\link[car]{Anova}} (from the \pkg{car} package) for data in the \strong{long} format (i.e., one observation per row), possibly aggregating the data if there is more than one obersvation per individuum and cell. Hence, mixed between-within ANOVAs can be calculated conveniently without using the rather unhandy format of \code{car::Anova}. \code{aov.car} can be called using a formula similar to \code{\link{aov}} specifying an error strata for the within-subject factor(s). \code{ez.glm} is called specifying the factors as character vectors.
 #'
-#' @usage aov.car(formula, data, fun.aggregate = NULL, type = 3, ...)
+#' @usage aov.car(formula, data, fun.aggregate = NULL, type = 3, return = "Anova", ...)
 #'
-#' ez.glm(id, dv, data, between = NULL, within = NULL, covariate = NULL, fun.aggregate = NULL, type = 3, ..., print.formula = FALSE)
+#' ez.glm(id, dv, data, between = NULL, within = NULL, covariate = NULL, fun.aggregate = NULL, type = 3, return = "Anova", ..., print.formula = FALSE)
 #' 
 #' univ(object)
 #'
@@ -18,10 +18,18 @@
 #' @param fun.aggregate The function for aggregating the data before running the ANOVA if there is more than one obervation per individuum and cell of the design. The default \code{NULL} issues a warning if aggregation is necessary and uses \code{\link{mean}}.
 #' @param type The type of sums of squares for the ANOVA. \strong{Defaults to 3}. Passed to \code{\link[car]{Anova}}. Possible values are \code{"II"}, \code{"III"}, \code{2}, or \code{3}.
 #' @param print.formula \code{ez.glm} is a wrapper for \code{aov.car}. This boolean argument indicates whether the formula in the call to \code{car.aov} should be printed. 
+#' @param return What should be returned? If \code{"Anova"} (the default) will return the object returned by \code{car::Anova}, anything else will return a list (see section Value).
 #' @param ... Further arguments passed to \code{fun.aggregate}.
 #' @param object An object of class \code{Anova.mlm} as returned by \code{aov.car}, \code{ez.glm}, or \code{\link[car]{Anova}}.
 #'
-#' @return \code{aov.car} and \code{ez.glm} are wrappers and therfore return the same as \code{\link[car]{Anova}}. Usually an object of class \code{"Anova.mlm"} (with within-subjects factors) or of class \code{c("anova", "data.frame")}.
+#' @return \code{aov.car} and \code{ez.glm} are wrappers to \code{\link[car]{Anova}}. When argument \code{return} is \code{"Anova"} (the default) they return the same as \code{\link[car]{Anova}}. Usually an object of class \code{"Anova.mlm"} (with within-subjects factors) or of class \code{c("anova", "data.frame")}. If \code{return} is something different they return a \code{list} with the following elements:
+#'
+#' \describe{
+#'   \item{"Anova"}{the object returned by \code{Anova}}
+#'   \item{"lm"}{the object fitted with \code{lm} and passed to \code{Anova} (i.e., an object of class \code{"lm"} or \code{"mlm"}).}
+#'   \item{"data"}{the data used to fit the \code{lm} object.}
+#'   \item{"idata"}{if within-subject factors are present, the \code{idata} argument passed to \code{Anova}.}
+#' }
 #' 
 #' \code{univ} returns a \code{list} of \code{data.frame}s containing the univariate results (i.e., the classical ANOVA results) from an object of class \code{"Anova.mlm"}. This is essentially the output from \code{summary.Anova.mlm} with \code{multivariate = FALSE}, e.g. \code{summary(aov.car(...), multivriate = FALSE)}, as a list instead of printed to the console.\cr
 #' For objects of class \code{"anova"} (i.e., the object returned by \code{car::Anova} for a purely between-subjects ANOVA) the object is returned unaltered.
@@ -215,10 +223,19 @@
 #' 
 #' univ(ez.glm("id", "value", obk.long,  NULL, c("phase", "hour"), type = 2, print.formula = TRUE))
 #' 
+#' # using the return argument:
+#' str(aov.car(value ~ Error(id/phase*hour), data = obk.long, return = ""), 1)
 #' 
+#' ## List of 4
+#' ##  $ Anova:List of 14
+#' ##   ..- attr(*, "class")= chr "Anova.mlm"
+#' ##  $ lm   :List of 11
+#' ##   ..- attr(*, "class")= chr [1:2] "mlm" "lm"
+#' ##  $ data :'data.frame':  16 obs. of  16 variables:
+#' ##  $ idata:'data.frame':  15 obs. of  2 variables:
+#'
 
-
-aov.car <- function(formula, data, fun.aggregate = NULL, type = 3, ...) {
+aov.car <- function(formula, data, fun.aggregate = NULL, type = 3, return = "Anova", ...) {
 	#browser()
 	# stuff copied from aov:
 	Terms <- terms(formula, "Error", data = data)
@@ -258,6 +275,8 @@ aov.car <- function(formula, data, fun.aggregate = NULL, type = 3, ...) {
 	if ((type == 3 | type == "III") & options("contrasts")[[1]][1] != "contr.sum") warning(str_c("Calculating Type 3 sums with contrasts = ", options("contrasts")[[1]][1], ".\n  Use options(contrasts=c('contr.sum','contr.poly')) instead"))
 	# prepare the data:
 	tmp.dat <- dcast(data, formula = as.formula(str_c(lh1, if (length(within) > 0) rh1 else ".", sep = "~")), fun.aggregate = fun.aggregate, ..., value.var = dv)
+	#browser()
+	data.l <- list(data = tmp.dat)
 	# branching based on type of ANOVA
 	if (length(within) > 0) {  # if within-subject factors are present:
 		# make idata argument
@@ -270,17 +289,20 @@ aov.car <- function(formula, data, fun.aggregate = NULL, type = 3, ...) {
 		}
 		# print(as.formula(str_c("cbind(",str_c(colnames(tmp.dat[-(seq_along(c(id, between)))]), collapse = ", "), ") ~ ", rh2)))
 		tmp.lm <- lm(as.formula(str_c("cbind(",str_c(colnames(tmp.dat[-(seq_along(c(id, between)))]), collapse = ", "), ") ~ ", rh2)), data = tmp.dat)
-		Anova(tmp.lm, idata = idata, idesign = as.formula(str_c("~", rh3)), type = type)
+		Anova.out <- Anova(tmp.lm, idata = idata, idesign = as.formula(str_c("~", rh3)), type = type)
+		data.l <- c(data.l, idata = list(idata))
 	} else { # if NO within-subjetc factors are present (i.e., purley between ANOVA):
 		colnames(tmp.dat)[ncol(tmp.dat)] <- "dv"
 		tmp.lm <- lm(as.formula(str_c("dv ~ ", rh2)), data = tmp.dat)
-		Anova(tmp.lm, type = type)
+		Anova.out <- Anova(tmp.lm, type = type)
 	}
+	if (return == "Anova") Anova.out
+	else c("Anova" = list(Anova.out), "lm" = list(tmp.lm), data.l)
 }
 
 
 
-ez.glm <- function(id, dv, data, between = NULL, within = NULL, covariate = NULL, fun.aggregate = NULL, type = 3, ..., print.formula = FALSE) {
+ez.glm <- function(id, dv, data, between = NULL, within = NULL, covariate = NULL, fun.aggregate = NULL, type = 3, return = "Anova", ..., print.formula = FALSE) {
 	if (is.null(between) & is.null(within)) stop("Either between or within need to be non-NULL!")
 	if (!is.null(covariate)) covariate <- str_c(covariate, collapse = "+")
 	#browser()
@@ -288,7 +310,7 @@ ez.glm <- function(id, dv, data, between = NULL, within = NULL, covariate = NULL
 	error <- str_c(" + Error(", id, if (!is.null(within)) "/" else "", str_c(within, collapse = " * "), ")")
 	formula <- str_c(dv, " ~ ", rh, error)
 	if (print.formula) message(str_c("Formula send to aov.car: ", formula))
-	aov.car(formula = as.formula(formula), data = data, fun.aggregate = fun.aggregate, type = type, ...)
+	aov.car(formula = as.formula(formula), data = data, fun.aggregate = fun.aggregate, type = type, return = return, ...)
 }
 
 
